ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    networking.gke.io/managed-certificates: "<managed-certificate-name>"
    spec.ingressClassName: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
      #    kubernetes.io/ingress.allow-http: "true"
      #    kubernetes.io/ingress.allow-https: "true"
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
